[ux] fix code whitespace

--- a/static/css/components/code.styl
+++ b/static/css/components/code.styl
@@ -24,7 +24,7 @@ pre
     display: block
     padding: 20px
     line-height: 1.5
-    white-space: nowrap
+    white-space: pre
 
 // &yet light
 
