--- a/static/css/main.css
+++ b/static/css/main.css
@@ -269,7 +269,7 @@ pre code {
   display: block;
   padding: 20px;
   line-height: 1.5;
-  white-space: nowrap;
+  white-space: pre;
 }
 pre code {
   color: #272b2d;
